# sc23-itoyori-artifact

./: .gitmodules  README.md
ityrbench/: Makefile  README.md  build_common.bash  cilksort.cpp  cilksort.yaml  exafmm.yaml  exafmm_mpi.yaml  kochi.yaml  run_common.bash  uts++.yaml  uts.yaml
ityrbench/exafmm/: Makefile.am.include  configure  configure.ac
ityrbench/exafmm/examples/: Makefile.in  fmm.cxx
ityrbench/exafmm/hss/: Makefile.in
ityrbench/exafmm/include/: args.h  bound_box.h  build_tree_serial.h  build_tree_tbb.h  dataset.h  logger.h  traversal.h  types.h  up_down_pass.h
ityrbench/exafmm/kernels/: biot_savart.h  helmholtz.h  laplace.h
ityrbench/exafmm/wrappers/: Makefile.in
ityrbench/exafmm_mpi/: .gitignore  Makefile.am.include  Makefile.in  aclocal.m4
ityrbench/exafmm_mpi/examples/: Makefile.am  Makefile.in  fmm_mpi.cxx
ityrbench/exafmm_mpi/hss/: Makefile.in
ityrbench/exafmm_mpi/include/: args.h  logger.h  thread.h  types.h
ityrbench/exafmm_mpi/wrappers/: Makefile.in
ityrbench/ityr/: container.hpp  iro.hpp  iro_context.hpp  iro_ref.hpp  iterator.hpp  ito_group.hpp  ito_pattern.hpp  ityr.hpp  util.hpp  wallclock.hpp
ityrbench/ityr/logger/: impl_dummy.hpp  impl_stats.hpp  impl_trace.hpp  kind.hpp  logger.hpp
ityrbench/uts/: main++.cc  main.cc  uts.c  uts.h
massivethreads-dm/: Makefile.in  README.md  configure  configure.ac  make.bash
massivethreads-dm/comm/: Makefile.in
massivethreads-dm/comm/examples/: Makefile.in
massivethreads-dm/comm/examples/one_sided/: Makefile.in
massivethreads-dm/comm/examples/perf/: Makefile.in
massivethreads-dm/comm/include/: Makefile.in  madm_global_clock.h  madm_logger_kind.h  madm_logger_trace.h  madm_misc.h
massivethreads-dm/comm/include/madm/: Makefile.in  madm_comm_acconfig.h.in
massivethreads-dm/comm/include/mlog/: Makefile.in
massivethreads-dm/comm/src/: Makefile.in  madm_comm.cc
massivethreads-dm/comm/src/mpi3/: comm_memory.cc
massivethreads-dm/misc/: Makefile.in
massivethreads-dm/misc/madmrun/: Makefile.in
massivethreads-dm/uth/: Makefile.in
massivethreads-dm/uth/examples/: Makefile.in
massivethreads-dm/uth/examples/bin_lambda/: Makefile.in
massivethreads-dm/uth/examples/flat/: Makefile.in
massivethreads-dm/uth/examples/host/: Makefile.in
massivethreads-dm/uth/examples/nqueens/: Makefile.in
massivethreads-dm/uth/include/: Makefile.in
massivethreads-dm/uth/src/: Makefile.in  process.cc  uth_options.cc
pcas/: CMakeLists.txt  README.md
pcas/include/pcas/: allocator.hpp  cache.hpp  global_ptr.hpp  mem_mapper.hpp  mem_obj.hpp  pcas.hpp  physical_mem.hpp  topology.hpp  util.hpp  virtual_mem.hpp  wallclock.hpp  whitelist.hpp
pcas/include/pcas/logger/: impl_dummy.hpp  kind.hpp  logger.hpp
pcas/tests/: CMakeLists.txt  doctest.cpp  matmul.cpp
plot_scripts/: plot_util.py
plot_scripts/cilksort/: granularity.py  scaling.py  stats.py
plot_scripts/exafmm/: mpi_balance.py  scaling.py
plot_scripts/uts++/: scaling.py
(+19 files in other folders)
